--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,10 @@ development:
   queue:
     <<: *default
     database: storage/development.sqlite3
+  cache:
+    <<: *default
+    database: storage/development.sqlite3
+    # migrations_paths: db/cache_migrate
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -29,6 +33,9 @@ test:
     <<: *default
     database: storage/test.sqlite3
   queue:
+    <<: *default
+    database: storage/test.sqlite3
+  cache:
     <<: *default
     database: storage/test.sqlite3
 
