--- a/config/cable.yml
+++ b/config/cable.yml
@@ -3,15 +3,21 @@
 # not a terminal started via bin/rails console! Add "console" to any action or any ERB template view
 # to make the web console appear.
 development:
-  adapter: async
+  adapter: solid_cable
+  # connects_to:
+  #   database:
+  #     writing: cable
+  polling_interval: 0.1.seconds
+  message_retention: 1.day
+
 
 test:
   adapter: test
 
-production:
-  adapter: solid_cable
-  connects_to:
-    database:
-      writing: cable
-  polling_interval: 0.1.seconds
-  message_retention: 1.day
+# production:
+#   adapter: solid_cable
+#   connects_to:
+#     database:
+#       writing: cable
+#   polling_interval: 0.1.seconds
+#   message_retention: 1.day
